--- a/bs/clap.html
+++ b/bs/clap.html
@@ -13,13 +13,16 @@
   }
 
   * {
+    font-family: verdana, sans-serif;
     box-sizing: border-box;
     margin: 0;
     padding: 0;
   }
 
   html {
-    background: white;
+    background: linear-gradient(rgba(50, 50, 50, 0.9), rgba(50, 50, 50, 0.5)),
+      url("https://assets.codepen.io/8841541/set.jpeg");
+    background-size: cover;
     height: 100%;
   }
 
@@ -164,9 +167,7 @@
     padding: 0;
   }
 
-  .scene__text, .take__text, .roll__text,
-  .date__text, .prod__text, .sound__text,
-  .director__text, .cinematographer__text {
+  .scene__text, .take__text, .roll__text {
     font-family: "Eraser";
     color: white;
     font-size: 1.5rem;
@@ -220,61 +221,16 @@
     background: #151515;
   }
 
-@keyframes clap {
-  0% { transform: rotate(0deg); }          /* Closed */
-  30% { transform: rotate(-20deg); }       /* Slowly open top */
-  35% { transform: rotate(-70deg); }       /* Fully open quickly */
-  40% { transform: rotate(0deg); }         /* Snap back closed */
-  100% { transform: rotate(0deg); }        /* Stay closed */
-}
+  @keyframes rotateUp {
+    0% { transform: rotate(0deg); }
+    96% { transform: rotate(-35deg); }
+    100% { transform: rotate(0deg); }
+  }
 
-.rotateUp {
-  transform-origin: left center;
-  animation: clap 4s forwards;
-  animation-delay: 3s; /* Wait 3 seconds before starting */
-}
-
-body {
-  margin: 0;
-  padding: 0;
-  height: 100vh;
-  background: white; /* start white */
-  overflow: hidden;
-}
-
-/* Zoom the clapperboard */
-@keyframes zoomClapper {
-  0% { transform: scale(1); }
-  100% { transform: scale(25); } /* zoom in big */
-}
-
-.outercontainer {
-  width: 100%;
-  height: 100vh;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  animation: zoomClapper 3s ease-in 4s forwards; /* wait 4s, zoom 3s */
-}
-
-/* Replace with black after zoom */
-@keyframes replaceWithBlack {
-  0%, 99.9% { background: white; }
-  100% { background: black; }
-}
-
-body {
-  animation: replaceWithBlack 0.01s linear 7s forwards; 
-  /* 7s = 4s wait + 3s zoom */
-}
-
-  .container { width: 700px; height: 700px; }
-.clappercontainer { width: 700px; }
-.clapper__top, .clapper__bottom { height: 80px; }
-.hinge { width: 140px; height: 100px; }
-.scene__text, .take__text, .roll__text { font-size: 2rem; }
-
-
+  .rotateUp {
+    transform-origin: left center;
+    animation: rotateUp 4s infinite;
+  }
 </style>
 </head>
 <body>
@@ -286,7 +242,6 @@ body {
       <p class="hinge__rivet hinge__rivet--bottomleft">⚪️</p>
       <p class="hinge__rivet hinge__rivet--bottomright">⚪️</p>
     </div>
-
     <div class="clapper__top rotateUp">
       <div class="clapper__top--white"></div>
       <div class="clapper__top--white"></div>
@@ -308,15 +263,15 @@ body {
         <div class="scene-take-roll">
           <div class="scene">
             <p class="text">Scene:</p>
-            <p class="scene__text">RIGNITC</p>
+            <p class="scene__text"></p>
           </div>
           <div class="take">
             <p class="text">Take:</p>
-            <p class="take__text">2</p>
+            <p class="take__text"></p>
           </div>
           <div class="roll">
             <p class="text">Roll:</p>
-            <p class="roll__text">A</p>
+            <p class="roll__text"></p>
           </div>
         </div>
 
@@ -324,26 +279,22 @@ body {
           <div class="date-prod">
             <div class="date">
               <p class="text text--padded">Date:</p>
-              <p class="date__text">May 2012</p>
+              <p class="date__text"></p>
             </div>
             <div class="prod">
-              <p class="text text--padded">Place:</p>
-              <p class="prod__text">NIT Calicut</p>
+              <p class="text text--padded">Prod.</p>
             </div>
           </div>
           <div class="sound">
             <p class="text text--padded">Sound:</p>
-            <p class="sound__text">Echoes of Innovation</p>
           </div>
         </div>
 
         <div class="director">
-          <p class="text text--padded">Faculty Supervisor:</p>
-          <p class="director__text">Dr. Sudheer A.P.</p>
+          <p class="text text--padded">Director:</p>
         </div>
         <div class="cinematographer">
-          <p class="text text--padded">Team Captain:</p>
-          <p class="cinematographer__text">Jibin Rajan Varghese</p>
+          <p class="text text--padded">Cinematographer:</p>
         </div>
       </div>
     </div>
