--- a/bs/clap2.html
+++ b/bs/clap2.html
@@ -222,7 +222,7 @@
 
   @keyframes rotateUp {
     0% { transform: rotate(0deg); }
-    96% { transform: rotate(-35deg); }
+    96% { transform: rotate(-10deg); }
     100% { transform: rotate(0deg); }
   }
 
@@ -230,6 +230,14 @@
     transform-origin: left center;
     animation: rotateUp 4s infinite;
   }
+
+    .container { width: 700px; height: 700px; }
+.clappercontainer { width: 700px; }
+.clapper__top, .clapper__bottom { height: 80px; }
+.hinge { width: 140px; height: 100px; }
+.scene__text, .take__text, .roll__text { font-size: 2rem; }
+
+
 </style>
 </head>
 <body>
