--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Fredoka:wght@300..700&family=Libre+Caslon+Display&display=swap" rel="stylesheet">
+<link href="https://db.onlinewebfonts.com/c/f39c9c54bc3f4f701ca3b18d675dde06?family=F3D+Techno+W00+Shadow" rel="stylesheet" type="text/css"/>
 
 <link rel="stylesheet" href="assets/css/navbar.css">
 
@@ -283,56 +284,63 @@
       border-radius: 20px;
     }
 
-    /* Button styling */
-    #about .about-link {
-      display: inline-flex;
-      align-items: center;
-      justify-content: center;
-      font-weight: bold;
-      font-size: 1rem;
-      color: #fff;
-      text-decoration: none;
-      padding: 12px 28px;
-      border: 2px solid #fff;
-      border-radius: 50px;
-      position: relative;
-      overflow: hidden;
-      transition: all 0.4s ease;
-      margin-top: 20px;
-    }
+/* Button styling */
+#about .about-link {
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  font-family: "F3D Techno W00 Shadow", sans-serif;  
+  font-weight: normal;                               
+  font-size: 3.1rem;                                 
+  color: #fff;
+  text-decoration: none;
+  padding: 12px 28px;
+  border: 2px solid #fff;
+  border-radius: 50px;
+  position: relative;
+  overflow: hidden;
+  transition: all 0.4s ease;
+  margin-top: 20px;
+}
 
-    #about .about-link::before {
-      content: "";
-      position: absolute;
-      top: 0;
-      left: -100%;
-      width: 100%;
-      height: 100%;
-      background: linear-gradient(120deg, rgba(255,255,255,0.2), rgba(255,255,255,0.4), rgba(255,255,255,0.2));
-      transform: skewX(-25deg);
-      transition: all 0.5s ease;
-    }
+#about .about-link::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: -100%;
+  width: 100%;
+  height: 100%;
+  background: linear-gradient(
+    120deg,
+    rgba(255, 255, 255, 0.2),
+    rgba(255, 255, 255, 0.4),
+    rgba(255, 255, 255, 0.2)
+  );
+  transform: skewX(-25deg);
+  transition: all 0.5s ease;
+}
 
-    #about .about-link:hover::before {
-      left: 200%;
-    }
+#about .about-link:hover::before {
+  left: 200%;
+}
 
-    #about .about-link:hover {
-      color: #000;
-      background: #fff;
-      box-shadow: 0 0 20px rgba(255,255,255,0.6);
-      transform: scale(1.05);
-    }
+#about .about-link:hover {
+  color: #000;
+  background: #fff;
+  box-shadow: 0 0 20px rgba(255, 255, 255, 0.6);
+  transform: scale(1.05);
+}
 
-    #about .about-link span {
-      margin-left: 8px;
-      display: inline-block;
-      transition: transform 0.3s ease;
-    }
+#about .about-link span {
+  margin-left: 8px;
+  display: inline-block;
+  transition: transform 0.3s ease;
+}
 
-    #about .about-link:hover span {
-      transform: translateX(6px);
-    }
+#about .about-link:hover span {
+  transform: translateX(6px);
+}
+
 
     @media (max-width: 900px) {
       #about .about-container {
@@ -526,95 +534,102 @@
     margin: 0;
     opacity: 0.9;
   }
+#projects .project-link {
+  align-self: flex-start;
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  font-family: "F3D Techno W00 Shadow", sans-serif;  
+  font-weight: normal;                               
+  font-size: 2.1rem;                                
+  color: #fff;
+  text-decoration: none;
+  padding: 12px 28px;
+  border: 2px solid #fff;
+  border-radius: 50px;
+  position: relative;
+  overflow: hidden;
+  transition: all 0.4s ease;
+  margin-top: 12px;
+}
 
-  #projects .project-link {
-    align-self: flex-start;
-    display: inline-flex;
-    align-items: center;
-    justify-content: center;
-    font-weight: bold;
-    font-size: 1rem;
-    color: #fff;
-    text-decoration: none;
-    padding: 12px 28px;
-    border: 2px solid #fff;
-    border-radius: 50px;
-    position: relative;
-    overflow: hidden;
-    transition: all 0.4s ease;
-    margin-top: 12px;
+#projects .project-link::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: -100%;
+  width: 100%;
+  height: 100%;
+  background: linear-gradient(
+    120deg,
+    rgba(255,255,255,0.2),
+    rgba(255,255,255,0.4),
+    rgba(255,255,255,0.2)
+  );
+  transform: skewX(-25deg);
+  transition: all 0.5s ease;
+}
+
+#projects .project-link:hover::before {
+  left: 200%;
+}
+
+#projects .project-link:hover {
+  color: #000;
+  background: #fff;
+  box-shadow: 0 0 20px rgba(255,255,255,0.6);
+  transform: scale(1.05);
+}
+
+#projects .project-link span {
+  margin-left: 8px;
+  display: inline-block;
+  transition: transform 0.3s ease;
+}
+
+#projects .project-link:hover span {
+  transform: translateX(6px);
+}
+
+#projects .view-all {
+  display: flex;
+  justify-content: flex-end;
+  opacity: 0;
+  transform: translateY(50px);
+  transition: all 0.8s ease-out;
+  width: 100%;
+}
+
+#projects .view-all.show {
+  opacity: 1;
+  transform: translateY(0);
+}
+
+#projects .view-all a {
+  font-family: "F3D Techno W00 Shadow", sans-serif;  /* ✅ added font */
+  font-weight: normal;
+  font-size: 2.2rem;
+  color: #fff;
+  text-decoration: none;
+  border-bottom: 1px solid #fff;
+  padding-bottom: 2px;
+  transition: all 0.3s ease;
+}
+
+#projects .view-all a:hover {
+  color: #aaa;
+  border-color: #aaa;
+}
+
+@media (max-width: 900px) {
+  #projects .projects-header {
+    text-align: center;
   }
-
-  #projects .project-link::before {
-    content: "";
-    position: absolute;
-    top: 0;
-    left: -100%;
-    width: 100%;
-    height: 100%;
-    background: linear-gradient(120deg, rgba(255,255,255,0.2), rgba(255,255,255,0.4), rgba(255,255,255,0.2));
-    transform: skewX(-25deg);
-    transition: all 0.5s ease;
-  }
-
-  #projects .project-link:hover::before {
-    left: 200%;
-  }
-
-  #projects .project-link:hover {
-    color: #000;
-    background: #fff;
-    box-shadow: 0 0 20px rgba(255,255,255,0.6);
-    transform: scale(1.05);
-  }
-
-  #projects .project-link span {
-    margin-left: 8px;
-    display: inline-block;
-    transition: transform 0.3s ease;
-  }
-
-  #projects .project-link:hover span {
-    transform: translateX(6px);
-  }
-
   #projects .view-all {
-    display: flex;
-    justify-content: flex-end;
-    opacity: 0;
-    transform: translateY(50px);
-    transition: all 0.8s ease-out;
-    width: 100%;
+    justify-content: center;
   }
+}
 
-  #projects .view-all.show {
-    opacity: 1;
-    transform: translateY(0);
-  }
-
-  #projects .view-all a {
-    font-size: 1.2rem;
-    font-weight: bold;
-    color: #fff;
-    text-decoration: none;
-    border-bottom: 1px solid #fff;
-    padding-bottom: 2px;
-    transition: all 0.3s ease;
-  }
-
-  #projects .view-all a:hover {
-    color: #aaa;
-    border-color: #aaa;
-  }
-
-  @media (max-width: 900px) {
-    #projects .projects-header {
-      text-align: center;
-    }
-    #projects .view-all {
-      justify-content: center;
-    }
-  }
 </style>
 
 
