--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
     /* SLIDER */
     .slider-container {
-      width: 100vw; height: 100vh; overflow: hidden; position: relative;
+      width: 100vw; height: 100vh; overflow: hidden; position: relative;margin-top: 60px;
     }
     .slider {
       display: flex; width: 400vw; height: 100%; /* 4 scenes */
@@ -123,7 +123,7 @@
 
   <!-- NAVBAR -->
 <nav id="navbar">
-  <div class="logo">
+  <div href="#" class="logo">
     <img src="assets/images/logo.png" alt="Logo">
   </div>
   <div class="nav-links">
@@ -373,7 +373,7 @@
         Join us to explore the world of robotics, collaborate on exciting projects, 
         and push the boundaries of technology.
       </p>
-      <a href="about/" class="about-link">Know More About Us <span>→</span></a>
+      <a href="about/" class="about-link">Know More<span>→</span></a>
     </div>
 
     <!-- 3D CARD REPLACEMENT -->
@@ -466,7 +466,7 @@
     opacity: 0;
     transform: translateY(50px);
     transition: all 0.8s ease-out;
-    text-align: left; /* default left */
+    text-align: center; /* default left */
     width: 100%;
   }
 
@@ -693,124 +693,143 @@
   
 
 <section id="gallery">
-  <style>
+<style>
+  #gallery {
+    background: #111;
+    color: #fff;
+    font-family: "Libre Caslon Display", serif;
+    margin: 0;
+    padding: 120px 50px 50px;
+    display: flex;
+    justify-content: flex-start; /* align items to the left */
+    align-items: flex-start;
+    flex-wrap: nowrap; /* keep them side by side */
+    gap: 50px;
+    position: relative;
+    overflow: hidden;
+  }
+
+  /* Header / title on the right */
+  #gallery h1 {
+    flex: 0 0 auto; /* only take the space it needs */
+    font-size: 4rem;
+    margin: 0;
+    opacity: 0;
+    transform: translateY(50px);
+    transition: all 0.8s ease-out;
+    order: 2; /* move header to the right */
+  }
+
+  #gallery h1.show {
+    opacity: 1;
+    transform: translateY(0);
+  }
+
+  /* Gallery images on the left */
+  #gallery .polaroid-stage {
+    flex: 1 1 70%; /* take more space on the left */
+    min-width: 600px;
+    min-height: 500px;
+    position: relative;
+    order: 1; /* ensure images are first */
+  }
+
+  /* Polaroid style images */
+  #gallery .polaroid {
+    position: absolute;
+    width: 200px;
+    height: 250px; /* taller to fit the classic bottom border */
+    background: #fff;
+    box-shadow: 0 5px 15px rgba(0,0,0,0.5);
+    border: 1px solid #fff;
+    padding: 5px 5px 45px; /* longer bottom padding for Polaroid effect */
+    transition: all 0.8s ease;
+    cursor: pointer;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+  }
+
+  #gallery .polaroid img {
+    width: 100%;
+    height: auto;
+    flex-grow: 1; /* fill available space but leave bottom padding */
+    object-fit: cover;
+    display: block;
+  }
+
+  #gallery .gallery-controls {
+    position: absolute;
+    bottom: 20px;
+    right: 20px;
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    font-size: 1.3rem;
+  }
+
+  #gallery .gallery-controls button {
+    background: #000;
+    border: 1px solid #fff;
+    color: #fff;
+    padding: 8px;
+    border-radius: 50%;
+    cursor: pointer;
+    transition: all 0.3s ease;
+  }
+
+  #gallery .gallery-controls button:hover {
+    background: #fff;
+    color: #000;
+  }
+
+  /* Lightbox */
+  #gallery .lightbox {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0,0,0,0.9);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    opacity: 0;
+    pointer-events: none;
+    transition: opacity 0.4s ease;
+    z-index: 1000;
+  }
+
+  #gallery .lightbox img {
+    max-width: 90%;
+    max-height: 90%;
+    border: 4px solid #fff;
+    border-radius: 12px;
+  }
+
+  #gallery .lightbox.show {
+    opacity: 1;
+    pointer-events: all;
+  }
+
+  @media (max-width: 900px) {
     #gallery {
-      background: #111;
-      color: #fff;
-      font-family: "Libre Caslon Display", serif;
-      margin: 0;
-      padding: 120px 50px 50px;
-      display: flex;
-      justify-content: space-between;
-      align-items: flex-start;
-      flex-wrap: wrap;
-      gap: 50px;
-      position: relative;
-      overflow: hidden;
-    }
-
-    #gallery h1 {
-      flex: 1 1 400px;
-      font-size: 4rem;
-      margin: 0;
-      opacity: 0;
-      transform: translateY(50px);
-      transition: all 0.8s ease-out;
-    }
-    #gallery h1.show {
-      opacity: 1;
-      transform: translateY(0);
-    }
-
-    #gallery .polaroid-stage {
-      flex: 2 1 600px;
-      width: 100%;
-      min-height: 500px;
-      position: relative;
-    }
-
-    #gallery .polaroid {
-      position: absolute;
-      width: 200px;
-      height: 220px;
-      background: #fff;
-      box-shadow: 0 0 15px rgba(0,0,0,0.5);
-      border: 5px solid #fff;
-      transition: all 0.8s ease;
-      cursor: pointer;
-    }
-
-    #gallery .polaroid img {
-      width: 100%;
-      height: 100%;
-      object-fit: cover;
-      display: block;
-    }
-
-    #gallery .gallery-controls {
-      position: absolute;
-      bottom: 20px;
-      right: 20px;
-      display: flex;
       flex-direction: column;
-      gap: 10px;
-      font-size: 1.3rem;
+      text-align: center;
     }
-
-    #gallery .gallery-controls button {
-      background: #000;
-      border: 1px solid #fff;
-      color: #fff;
-      padding: 8px;
-      border-radius: 50%;
-      cursor: pointer;
-      transition: all 0.3s ease;
+    #gallery h1 {
+      font-size: 3rem;
+      order: 0; /* stack normally on mobile */
+      margin-top: 50px;
     }
-
-    #gallery .gallery-controls button:hover {
-      background: #fff;
-      color: #000;
-    }
-
-    /* Lightbox */
-    #gallery .lightbox {
-      position: fixed;
-      top: 0;
-      left: 0;
+    #gallery .polaroid-stage {
+      order: 0;
       width: 100%;
-      height: 100%;
-      background: rgba(0,0,0,0.9);
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      opacity: 0;
-      pointer-events: none;
-      transition: opacity 0.4s ease;
-      z-index: 1000;
+      min-width: auto;
     }
+  }
+</style>
 
-    #gallery .lightbox img {
-      max-width: 90%;
-      max-height: 90%;
-      border: 4px solid #fff;
-      border-radius: 12px;
-    }
-
-    #gallery .lightbox.show {
-      opacity: 1;
-      pointer-events: all;
-    }
-
-    @media (max-width: 900px) {
-      #gallery {
-        flex-direction: column;
-        text-align: center;
-      }
-      #gallery h1 {
-        font-size: 3rem;
-      }
-    }
-  </style>
 
   <h1>Gallery</h1>
   <div class="polaroid-stage" id="polaroidStage"></div>
