add(contact): formspree + alumini comp in main page

--- a/about/index.html
+++ b/about/index.html
@@ -174,9 +174,9 @@ html, body {
 
 
       <nav id="navbar">
-    <div href="../" class="logo">
-      <img src="../assets/images/logo.png" alt="Logo">
-    </div>
+  <a href="../" class="logo">
+  <img src="../assets/images/logo.png" alt="Logo">
+</a>
     <div class="nav-links">
       <a href="../about/">About Us</a>
       <a href="../projects/">Projects</a>
