fix(logo): logo path index

--- a/contact/index.html
+++ b/contact/index.html
@@ -201,7 +201,7 @@ html, body {
 
     <!-- Contact form -->
     <div class="contact-form-wrapper">
-      <h1 class="site-title">Contact Us</h1>
+      <h1 class="site-title">Contact US</h1>
       <form class="contact-form" action="https://formspree.io/f/xqaloprq" method="POST">
         <input type="text" name="name" placeholder="Your Name" required>
         <input type="email" name="email" placeholder="Your Email" required>
