--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
   <!-- NAVBAR -->
 <nav id="navbar">
   <a href="../" class="logo">
-  <img src="../assets/images/logo.png" alt="Logo">
+  <img src="assets/images/logo.png" alt="Logo">
 </a>
   <div class="nav-links">
     <a href="about/">About Us</a>
